--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,8 @@
       "request": "launch",
       "cwd": "${workspaceRoot}",
       "runtimeArgs": ["-r", "ts-node/register"],
-      "args": ["${workspaceRoot}/algorithms/array/05-single-number.ts"]
+      // "args": ["${workspaceRoot}/test.ts"]
+      "args": ["${workspaceRoot}/algorithms/array/06-intersection.ts"]
     }
   ]
 }
