--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "ts-node": "^10.2.0",
     "typescript": "^4.2.3"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "assert": "^2.0.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
