--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,8 @@
       "cwd": "${workspaceRoot}",
       "runtimeArgs": ["-r", "ts-node/register"],
       // "args": ["${workspaceRoot}/test.ts"]
-      "args": ["${workspaceRoot}/algorithms/array/11-rotate-image.ts"]
+      // "args": ["${workspaceRoot}/algorithms/array/11-rotate-image.ts"]
+      "args": ["${workspaceRoot}/algorithms/strings/2-reverse-integer.ts"]
     }
   ]
 }
