--- a/package.json
+++ b/package.json
@@ -3,11 +3,21 @@
   "version": "1.0.0",
   "description": "Problems solving",
   "dependencies": {
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-node": "^11.1.0",
     "ts-node": "^10.2.0",
-    "typescript": "^4.2.3"
+    "typescript": ">=4.4"
+  },
+  "scripts": {
+    "lint": "npx **/*.js"
   },
   "devDependencies": {
-    "assert": "^2.0.0"
+    "@typescript-eslint/eslint-plugin": ">=5.43.0",
+    "@typescript-eslint/parser": ">=5.43.0",
+    "assert": "^2.0.0",
+    "eslint": ">=8.0.0",
+    "eslint-config-xo": "^0.43.1",
+    "eslint-config-xo-typescript": "^0.55.0"
   },
   "repository": {
     "type": "git",
