--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -62,10 +62,12 @@
         "@typescript-eslint/no-dupe-class-members": ["error"],
         "require-atomic-updates": "error",
 
-        // Firefly Code Quality rules
+        // Code Quality rules
         "@typescript-eslint/no-parameter-properties": [
-          "error",
-          { "allows": ["private readonly", "protected readonly"] }
+          true,
+          {
+            "allow": ["public"]
+          }
         ],
         "@typescript-eslint/no-explicit-any": "error",
         "@typescript-eslint/explicit-module-boundary-types": "error",
