--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "lint": "npx **/*.js"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": ">=5.43.0",
-    "@typescript-eslint/parser": ">=5.43.0",
+    "@typescript-eslint/eslint-plugin": "^6.9.1",
+    "@typescript-eslint/parser": "^6.9.1",
     "assert": "^2.0.0",
     "eslint": ">=8.0.0",
     "eslint-config-xo": "^0.43.1",
