--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "1.0.0",
   "description": "Problems solving",
   "dependencies": {
-    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-node": "^11.1.0",
     "ts-node": "^10.2.0",
     "typescript": ">=4.4"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   },
   "scripts": {
     "lint-old": "npx **/*.ts",
@@ -22,13 +25,12 @@
     "eslint-config-xo": "^0.43.1",
     "eslint-config-xo-typescript": "^0.55.0"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/sergeialimov/leetcode.git"
-  },
+  "repository": "git+https://github.com/sergeialimov/leetcode.git",
   "keywords": [
     "leetcode",
     "typescript"
   ],
-  "author": "Sergei Alimov"
+  "author": "Sergei Alimov",
+  "license": "MIT",
+  "main": "index.js"
 }
