--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "dependencies": {
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-node": "^11.1.0",
-    "ts-node": "^10.2.0",
-    "typescript": ">=4.4"
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   },
   "engines": {
     "node": ">=18.0.0"
