--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "eslint-plugin-node": "^11.1.0",
     "ts-node": "^10.9.1",
     "tsc": "^2.0.4",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.2.2"
   },
   "engines": {
